tests/baselines/reference/unusedPrivateVariableInClass1.errors.txt
unusedPrivateVariableInClass1.ts(2,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
unusedPrivateVariableInClass1.ts(2,13): error TS6133: 'x' is declared but its value is never read.


==== unusedPrivateVariableInClass1.ts (2 errors) ====
    class greeter {
        private x: string;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
                ~
!!! error TS6133: 'x' is declared but its value is never read.
    }